<resources>
    <string name="app_name">SUPJournal</string>
    <string name="connection_error">Connection Error</string>
    <string name="input_error">Fill in the field</string>
    <string name="sign_in">sign in</string>
    <string name="register">register</string>
    <string name="repeat_pass">repeat password</string>
    <string name="e_mail">e-mail</string>
    <string name="back">back</string>
    <string name="incorrect_user">incorrect user</string>
    <string name="incorrect_pass">incorrect password</string>
    <string name="password_not_equal">password mismatch</string>
    <string name="incorrect_email">incorrect email</string>
    <string name="user_exists">user exists</string>
    <string name="startTraining">start</string>
    <string name="stopgpx">Stop</string>
</resources>